# codet

./: .dockerignore  .gitignore  FRONTEND_README.md  Procfile  README.md  config.example.yaml  docker-compose.qdrant.yml  env.example  pyproject.toml  requirements.txt  setup.py  start_dev.sh
config/: config.example.yaml  config.redis.yaml  default.yaml  env.example
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.redis.yml  docker-compose.yml  frontend.Dockerfile  nginx.conf
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: AnalysisDashboard.css  AnalysisDashboard.js  Input.js  (+25 more)
src/: __init__.py  cli.py  worker.py
src/agents/: __init__.py  base_agent.py  file_analysis_agent.py  orchestrator_agent.py  schemas.py  tools.py
src/analyzers/: __init__.py  analyzer.py  duplication_analyzer.py  javascript_analyzer.py  python_analyzer.py
src/api/: __init__.py  main.py  models.py
src/codebase_indexer/: __init__.py  indexer.py  multi_language_parser.py  parser.py
src/core/: __init__.py  analysis_engine.py  config.py  job_queue.py  message_history.py  orchestrator_engine.py  redis_client.py  repository.py  repository_tree.py  rules_rag.py  shared_memory.py
src/indexer/: __init__.py  codebase_indexer.py  multi_language_parser.py  rules_indexer.py
src/reports/: __init__.py  report_generator.py
src/utils/: __init__.py  cli_status.py  file_filter.py  qdrant.py  repo_size_checker.py  rules_loader.py  snippet_extractor.py  symbol_extractor.py
tests/: __init__.py
(+4 files in other folders)
